# qr-code-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: generate_qr.py
src/qr_code_generator/: __init__.py
src/qr_code_generator/cli/: __init__.py  cli.py
src/qr_code_generator/generator/: __init__.py  generator.py
src/qr_code_generator/processor/: __init__.py  processor.py
src/qr_code_generator/sanitizer/: __init__.py  sanitize.py
tests/: test_generate_qr.py
