[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qr-code-generator"
version = "0.1.0"
description = "A simple QR code generator script."
authors = [{name = "Manuel Guzmán", email = "manuguzman8@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "qrcode[pil]>=7.4",   # qrcode core + Pillow for PNG rendering
]

[project.scripts]
generate-qr = "generate_qr:main"

[tool.hatch.build.targets.wheel]
packages = ["."]